user story #81001: task #44002

--- a/resources/leanft.properties
+++ b/resources/leanft.properties
@@ -32,10 +32,10 @@
 # reportEnabled=true
 
 # Title heading in the HTML Report. When not defined, the title is 'Run Results'.
-#title=Run Results
+title=Web Tutorial for UFT Developer
 
 # Description displayed below the title in the HTML Report. When not defined, no description is included.
-#description=
+description=This was the first Web Tutorial for UFT Developer using the Advantage Online Shopping App.
 
 # Location of generated report folder. Default path is the project output path. For path values, use FORWARD slashes instead of backslashes.
 #targetDirectory=.
@@ -50,7 +50,7 @@
 #reportLevel=All
 
 # Condition for attaching snapshots to the report. Possible values: All | OnError | Off (default)
-#snapshotsLevel=Off
+snapshotsLevel=All
 
 # Indicates whether in addition to the full run report, a per-test or per-class report is generated.
 # Possible values: PerTest | PerClass | Off (default)
